// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`init appends when .env present 1`] = `

✔ Your Prisma schema was created at ./schema.prisma.
  You can now open it in your favorite editor.

Next steps:
1. Run prisma introspect to turn your database schema into a Prisma data model.
2. Run prisma generate to install Prisma Client. You can then start querying your database.

More information in our documentation:
https://pris.ly/d/getting-started
    
`;

exports[`init appends when .env present 2`] = `
SOMTHING="is here"

# Environment variables declared in this file are automatically made available to Prisma.
# See the documentation for more detail: https://pris.ly/d/prisma-schema#using-environment-variables

# Prisma supports the native connection string format for PostgreSQL, MySQL and SQLite.
# See the documentation for all the connection string options: https://pris.ly/d/connection-strings

DATABASE_URL="postgres://prisma:prisma@localhost:5432/tests"
`;

exports[`init is schema and env written on disk replace 1`] = `

✔ Your Prisma schema was created at ./schema.prisma.
  You can now open it in your favorite editor.

Next steps:
1. Set the DATABASE_URL in the .env file to point to your existing database. If your database has no tables yet, read https://pris.ly/d/getting-started.
2. Set the provider of the datasource block in schema.prisma to match your database: postgresql, mysql or sqlite.
3. Run prisma introspect to turn your database schema into a Prisma data model.
4. Run prisma generate to install Prisma Client. You can then start querying your database.

More information in our documentation:
https://pris.ly/d/getting-started
    
`;

exports[`init warns when DATABASE_URL present in .env  1`] = `

✔ Your Prisma schema was created at ./schema.prisma.
  You can now open it in your favorite editor.

Next steps:
1. Run prisma introspect to turn your database schema into a Prisma data model.
2. Run prisma generate to install Prisma Client. You can then start querying your database.

More information in our documentation:
https://pris.ly/d/getting-started
    
`;

exports[`init works with url param 1`] = `

✔ Your Prisma schema was created at ./schema.prisma.
  You can now open it in your favorite editor.

Next steps:
1. Run prisma introspect to turn your database schema into a Prisma data model.
2. Run prisma generate to install Prisma Client. You can then start querying your database.

More information in our documentation:
https://pris.ly/d/getting-started
    
`;
